tests/architecture/fixtures/pass/src/dialogos/ports/sender.py
from __future__ import annotations

from typing import Protocol


class Sender(Protocol):
    def send(self, text: str) -> None: ...
