tests/architecture/fixtures/fail/src/silicato/domain/bad.py
from __future__ import annotations

from silicato.application.bad import build_sender


def make_sender() -> object:
    return build_sender()
